adjust the spacing issue

--- a/OMS Front End/src/styles/Common.scss
+++ b/OMS Front End/src/styles/Common.scss
@@ -320,7 +320,7 @@ a {
 
       .content-desc-section {
         .center-container {
-          height: calc(100vh - 70px);
+          height: calc(100vh - 60px);
           overflow: hidden;
           overflow-y: auto;
           margin-bottom: 0;
